--- a/Weight Converter/index.html
+++ b/Weight Converter/index.html
@@ -18,7 +18,7 @@
         <div class="card-body" id="innercontainer">
             <p class="card-text"><h6>Type a value in the Grams field to convert the value to Kilograms:</h6></p>
             <p>
-                <h6>Weigth in Grams: <input id="inputGrs" type="number" placeholder="Grams"></h6>
+                <h6>Weight in Grams: <input id="inputGrs" type="number" placeholder="Grams"></h6>
             </p>
             <p><h6>Weight in Kilograms: <span id="outputKgs"></span></h6></p>
             <br>
