--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
                                 href="https://github.com/Rajan-jha-eng/Nagarro-Internship-Projects/tree/main/Weight%20Converter">
                                 <button><i class="fa-brands fa-github"> </i></button> </a>
                         </span>
+                    </span>
+                </div>
+                <div class="project">
+                    <span>
+                        <h4 class="project-name"> Calculator </h4>
                         <span class="btns">
                             <a href="./Calculator/index.html"> <button><i class="fa-solid fa-link"></i></button>
                             </a>
