--- a/index.html
+++ b/index.html
@@ -179,6 +179,18 @@
                         </span>
                     </span>
                 </div>
+                <div class="project">
+                    <span>
+                        <h4 class="project-name">Theme Changer </h4>
+                        <span class="btns">
+                            <a href="./Theme Changer/index.html"> <button><i class="fa-solid fa-link"></i></button>
+                            </a>
+                            <a
+                                href="https://github.com/Rajan-jha-eng/Nagarro-Internship-Projects/tree/main/Theme%20Changer">
+                                <button><i class="fa-brands fa-github"> </i></button> </a>
+                        </span>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
