--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="project">
                     <span>
-                        <h4 class="project-name">Theme Changer </h4>
+                        <h4 class="project-name">Twitter Page </h4>
                         <span class="btns">
                             <a href="./Twitter Page/index.html"> <button><i class="fa-solid fa-link"></i></button>
                             </a>
