--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 </div>
                 <div class="project">
                     <span>
-                        <h4 class="project-name"> Portfolio </h4>
+                        <h4 class="project-name"> Food Delivery Website </h4>
 
                         <span class="btns">
-                            <a href="./portfolio/index.html"> <button><i class="fa-solid fa-link"></i></button>
+                            <a href=".Food Delivery Website/index.html"> <button><i class="fa-solid fa-link"></i></button>
                                 </i> </a>
-                            <a href="https://github.com/Rajan-jha-eng/project/tree/main/portfolio"><button><i
+                            <a href="https://github.com/Rajan-jha-eng/Nagarro-Internship-Projects/tree/main/Food%20Delivery%20Website"><button><i
                                         class="fa-brands fa-github"></i></button> </a>
 
                         </span>
@@ -200,6 +200,18 @@
                             <a
                                 href="https://github.com/Rajan-jha-eng/Nagarro-Internship-Projects/tree/main/Twitter%20Page">
                                 <button><i class="fa-brands fa-github"> </i></button> </a>
+                        </span>
+                    </span>
+                </div>
+                <div class="project">
+                    <span>
+                        <h4 class="project-name"> Portfolio </h4>
+
+                        <span class="btns">
+                            <a href="./portfolio/index.html"> <button><i class="fa-solid fa-link"></i></button>
+                                </i> </a>
+                            <a href="https://github.com/Rajan-jha-eng/Nagarro-Internship-Projects/tree/main/portfolio"><button><i
+                                        class="fa-brands fa-github"></i></button> </a>
                         </span>
                     </span>
                 </div>
