--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <h4 class="project-name"> Food Delivery Website </h4>
 
                         <span class="btns">
-                            <a href=".Food Delivery Website/index.html"> <button><i class="fa-solid fa-link"></i></button>
+                            <a href="./Food Delivery Website/index.html"> <button><i class="fa-solid fa-link"></i></button>
                                 </i> </a>
                             <a href="https://github.com/Rajan-jha-eng/Nagarro-Internship-Projects/tree/main/Food%20Delivery%20Website"><button><i
                                         class="fa-brands fa-github"></i></button> </a>
